Remove height media queries causing a huge bug that meant any small devices using the keyboard would break the game and they couldnt play

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1317,49 +1317,3 @@ textarea {
     font-weight: normal;
   }
 }
-
-@media screen and (max-height: 500px) {
-  .start-game-area {
-    display: none;
-  }
-
-  .difficulty-game-area {
-    display: none;
-  }
-
-  .question-game-area {
-    display: none;
-  }
-
-  .rules-game-area {
-    display: none;
-  }
-
-  .hiscores-game-area {
-    display: none;
-  }
-
-  .contact-game-area {
-    display: none;
-  }
-
-  .results-game-area {
-    display: none;
-  }
-
-  .size-error {
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-
-  .size-error h1 {
-    color: black;
-    background-color: white;
-    text-align: center;
-    padding: 5px;
-    font-weight: bold;
-  }
-}
